# toio.py

./: toio.py  toio_util.py
Toio/: example.py  example_osc.py  example_trace.py  example_turn.py  toio.py  toio_config.py  toio_debug.py  toio_func.py  toio_message.py  toio_osc.py  toio_tracer.py  toio_util.py
toio-pet-agent/: .env.example  .gitignore  README.md  pyproject.toml
toio-pet-agent/desktop/: index.html  package.json
toio-pet-agent/desktop/electron/: main.js  preload.js
toio-pet-agent/desktop/src/: App.tsx  index.css  vite-env.d.ts
toio-pet-agent/desktop/src/components/: ChatBubble.tsx  ChatPanel.tsx  CreationWizard.tsx  PetCanvas.tsx
toio-pet-agent/desktop/src/store/: petStore.ts
toio-pet-agent/scripts/: test_chat.py  test_integration.py  test_toio.py
toio-pet-agent/toio_pet_agent/: __init__.py  config.py  main.py  runtime.py
toio-pet-agent/toio_pet_agent/agent/: __init__.py  llm_client.py  pet_agent.py  pet_tools.py  tools.py
toio-pet-agent/toio_pet_agent/aigc/: __init__.py
toio-pet-agent/toio_pet_agent/server/: __init__.py
toio-pet-agent/toio_pet_agent/spatial/: __init__.py
toio-pet-agent/toio_pet_agent/toio/: __init__.py  controller.py  protocol.py
